# character-card

./: LICENSE  README.md  pyproject.toml
src/character_card/: __init__.py  builder.py  decoders.py  embed.py  models.py  png_chunks.py
src/character_card/parsers/: __init__.py  _fields.py  v1.py  v1_flat.py  v2.py  v3.py
tests/: helpers.py  test_builder.py  test_character_book.py  test_decoders.py  test_dispatcher.py  test_embed.py  test_mes_example.py  test_png_chunks.py  test_puro_fixture.py  test_smoke.py  test_spec_compliance.py  test_tag_dedup.py  test_v1.py  test_v2.py  test_v3.py
