[project]
name = "character-card"
version = "0.1.0"
description = "SillyTavern V1/V2/V3 character card parser, builder, and PNG embedder"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dmitriy Nyashkin", email = "sealnetsoul@gmail.com" },
]
keywords = [
    "sillytavern",
    "character-card",
    "llm",
    "roleplay",
    "v2",
    "v3",
    "png",
    "tEXt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/roleplay-studio/character-card"
Repository = "https://github.com/roleplay-studio/character-card"
Issues = "https://github.com/roleplay-studio/character-card/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
character_card = ["py.typed"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
    "N812",  # lowercase imported as non-lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
